breweriescomponent, ui fix in button text alignment

--- a/src/app/components/breweries/breweries.component.scss
+++ b/src/app/components/breweries/breweries.component.scss
@@ -12,4 +12,8 @@
         margin: 1rem;
         padding: .5rem
     }
+
+    &__button {
+        text-align: left;
+    }
 }
